--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
