--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "description": "",
   "dependencies": {
     "clsx": "^2.1.1",
-    "next": "^15.0.0",
+    "next": "^15.0.4-canary.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
